Cropped mountain image to avoid whitespace in parallax control

--- a/client/src/pages/Home/Home.module.scss
+++ b/client/src/pages/Home/Home.module.scss
@@ -23,12 +23,22 @@
   blockquote p {
     display: inline;
   }
+
+  // :global {
+  //   .jumbotron:hover {
+  //     background-color: #f9f9f9 !important;
+  //     transition: background-color 0.5s ease;
+  //   }
+  // }
 }
 
 
-.section-get-started {
+.banner {
   margin-bottom: 2em;
-  margin-top: 2em;
+
+  h1 {
+    margin-bottom: 2em;
+  }
 }
 
 .video-row {
